[team] Fix visibilité du bouton « Ajouter un commentaire »

--- a/ext/team.css
+++ b/ext/team.css
@@ -297,6 +297,10 @@
   right: 8px;
 }
 
+.post-right__scroll {
+  height: calc(100% - 42px);
+}
+
 /***************** *
  * Partout
  * *************** */
